refactor: Clean up unused imports, DTOs, and resolve IDE warnings across inventory, HR, and accounting domains