@@ -1,20 +1,21 @@
 package com.dduk.domain.hr.payroll;
 
+import com.dduk.domain.accounting.AccountingConstants;
+import com.dduk.domain.accounting.autojounal.AutoJournalService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class PayrollStatusService {
 
     private final PayrollRepository payrollRepository;
-    private final com.dduk.domain.accounting.autojounal.AutoJournalService autoJournalService;
+    private final AutoJournalService autoJournalService;
 
     private static final Map<String, List<String>> VALID_TRANSITIONS = new HashMap<>();
 
@@ -26,8 +27,8 @@ public class PayrollStatusService {
         VALID_TRANSITIONS.put("APPROVED", Arrays.asList("POSTED", "REVERSED"));
         VALID_TRANSITIONS.put("POSTED", Arrays.asList("PAID", "REVERSED"));
         VALID_TRANSITIONS.put("PAID", Arrays.asList("REVERSED"));
-        VALID_TRANSITIONS.put("REVERSED", Arrays.asList());
-        VALID_TRANSITIONS.put("CANCELLED", Arrays.asList());
+        VALID_TRANSITIONS.put("REVERSED", List.of());
+        VALID_TRANSITIONS.put("CANCELLED", List.of());
     }
 
     @Transactional(rollbackFor = Exception.class)
@@ -42,7 +43,7 @@ public class PayrollStatusService {
             return payroll;
         }
 
-        List<String> allowed = VALID_TRANSITIONS.getOrDefault(currentStatus, Arrays.asList());
+        List<String> allowed = VALID_TRANSITIONS.getOrDefault(currentStatus, List.of());
 
         if (!allowed.contains(nextStatus)) {
             throw new RuntimeException("Invalid transition: " + currentStatus + " -> " + nextStatus);
@@ -51,16 +52,16 @@ public class PayrollStatusService {
         // 2. POSTED 전환 시 회계 전표 생성 (트랜잭션 내 포함)
         if ("POSTED".equals(nextStatus)) {
             autoJournalService.createAndPostJournal(
-                    com.dduk.domain.accounting.AccountingConstants.SOURCE_PAYROLL,
+                    AccountingConstants.SOURCE_PAYROLL,
                     payroll.getId(),
                     payroll
             );
         }
 
         payroll.setStatus(nextStatus);
-        // In a real system, we would log this to an audit table
-        System.out.println(String.format("[StatusService] %d: %s -> %s (by %s, reason: %s)", 
-            payrollId, currentStatus, nextStatus, userId, reason));
+        
+        log.info("[StatusService] {}: {} -> {} (by {}, reason: {})", 
+            payrollId, currentStatus, nextStatus, userId, reason);
 
         return payrollRepository.save(payroll);
     }
